# windows_image_manager

./: .env.example  .gitignore  ASCII Architecture Poster.txt  README.md  Run book.txt  main.py  pyproject.toml  requirements.txt
src/file_manager/archive/: zipper.py
src/file_manager/cli/: commands.py  parser.py
src/file_manager/config/: loader.py  settings.py
src/file_manager/duplicates/: detector.py
src/file_manager/image_utils/: image_hash.py  inspector.py  organizer.py  processor.py
src/file_manager/logging/: logger.py
src/file_manager/ml/: dataset.py  features.py  persistence.py  predictor.py  trainer.py
src/file_manager/models/: duplicate_group.py  file_record.py  transfer_models.py
src/file_manager/operations/: copier.py  csv_actions.py  duplicate_policy.py  mover.py
src/file_manager/scanner/: metadata.py  scanner.py
src/file_manager/services/: archive_service.py  duplicate_service.py  file_action_service.py  ml_service.py  scan_service.py  transfer_service.py
src/file_manager/transfer/: protocol.py  receiver.py  sender.py
src/file_manager/utils/: csv_utils.py  disk.py  file_helpers.py  hashing.py  paths.py  retry.py  time_utils.py
tests/: conftest.py  test_csv_export.py  test_duplicate_detector.py  test_duplicate_policy.py  test_hashing.py  test_scanner.py
