[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "windows-file-manager"
version = "1.0.0"
description = "Windows-first modular file scanning, duplicate detection, transfer, archive, and image ML toolkit"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
